# XClaudeUsage

./: .gitignore  Cargo.toml  LICENSE  README.md  install.js  install.ps1  install.sh  xclaude-record.js  xclaude-usage.js
.github/workflows/: release.yml
cloud/: README.md  schema.sql
src/: cli.rs  log.rs  main.rs  paths.rs  record.rs  statusline.rs  transcript.rs
src/cloud/: mod.rs  pipeline.rs  sync.rs
src/db/: mod.rs  schema.rs
src/install/: migrate.rs  mod.rs  prompt.rs  settings.rs
