[package]
name = "xclaudeusage"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "Claude Code statusline + per-turn token recorder with optional multi-device sync"
repository = "https://github.com/SrDarf/XClaudeUsage"
readme = "README.md"

[[bin]]
name = "xclaudeusage"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
dirs = "5"
anyhow = "1"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
